Fixed song display issues on mobile

--- a/src/components/Songs/SongDisplay/SongDisplay.scss
+++ b/src/components/Songs/SongDisplay/SongDisplay.scss
@@ -10,7 +10,6 @@
 		display: grid;
 		white-space: pre-line;
 		grid-row-gap: 2.5rem;
-		width: max-content;
 		// width: 100%;
 		// max-width: var(--chakra-sizes-container-sm);
 	}
